OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/onboard-environments/dev/deployment-patch.yaml
---
# OAM ONBOARDING UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-onboarding
spec:
  replicas: 1
  template:
    spec:
      containers:      
      - name: oam-onboarding
        image: "997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-onboardingtest2:2202.01.00-030"   # Dev env picks the image from oam-onboarding-qa repo, later can be updated as needed
        volumeMounts:
          - name: efs-onboard-dev
            mountPath: /appData/tmp
      terminationGracePeriodSeconds: 10
      volumes:
        - name: efs-onboard-dev
          persistentVolumeClaim:
            claimName: efs-onboard-dev           
---
