OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/onboard-environments/dev/oam-onboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oam-onboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.org/proxy-connect-timeout: "1200"
    nginx.org/proxy-read-timeout: "1200"
    nginx.org/proxy-send-timeout: "1200"
    nginx.org/client-body-timeout: "1200"
    nginx.org/client-header-timeout: "1200"
    nginx.org/keepalive_timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.org/client-max-body-size: "1024m"
    nginx.org/proxy-max-temp-file-size: "1024m"
spec:
  rules:
    - host: onboarding-dev.infobelt.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oam-onboarding
                port:
                  number: 80                  
  tls:
  - hosts:
    - 'onboarding-dev.infobelt.net'
    secretName: onboarding-dev-infobelt-net
